// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full article with style 1`] = `
.c22 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c22:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c25 {
  padding-left: 10px;
}

.c18 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c27 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c28 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c24 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c23 {
  display: block;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c19.hidden {
  visibility: hidden;
}

.c20 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c21 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 250px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 10px 0;
  border-top: 1px solid rgb(219,219,219);
  border-bottom: 1px solid rgb(219,219,219);
}

.c26.hidden {
  min-height: auto;
  margin: 0;
  padding: 0;
  visibility: hidden;
}

.c9 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c9 + .c8 {
  margin-top: -1px !important;
}

.c9:last-child {
  margin-bottom: 30px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c8 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c17 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c16 {
  background-color: #FFFFFF;
  height: 60px;
}

.c16 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c16.tc-sticky {
  will-change: height,box-shadow;
}

.c16[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c16[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c15 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c15 + .c14 {
  margin-top: -1px !important;
}

.c15:last-child {
  margin-bottom: 30px;
}

.c15.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c13 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c5 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c11 {
  max-width: 100%;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  display: none;
}

.c7 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c22 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c27 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c28 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c28 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c23 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c21 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c21:first-of-type {
    margin-right: 1.5%;
  }

  .c21:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c26 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c26 {
    min-height: 250px;
  }
}

@media (min-width:768px) {
  .c9 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c9 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c9 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c12 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c6 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.S1 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S6 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S7 {
  line-height: 15px;
  margin-top: 5px;
}

.S8 {
  line-height: 17px;
}

.S9 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  display: none;
}

.IS8 {
  height: 100%;
  width: 100%;
}

.IS9 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS12 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS13 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0 responsiveweb-sc-1exejum-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <div
            className="c3 responsiveweb__HeaderContainer-sc-1nipn43-2 c3 css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S5"
          >
            <div
              className="css-view-1dbjc4n r-marginBottom-15d164r S2"
            >
              <div
                className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S1"
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="c4 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1nipn43-3 c4 css-text-901oao r-fontFamily-iirzy8 r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S3"
            >
              Some Headline
            </h1>
            <div
              className="c5 responsiveweb__FlagsContainer-sc-1nipn43-1 c5 css-view-1dbjc4n"
            >
              <ArticleFlags />
            </div>
            <h2
              className="c6 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1nipn43-8 c6 css-text-901oao r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S4"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c7 IS6"
        />
        <div
          className="c8 c9"
        >
          <div
            className="c10 responsiveweb__MetaContainer-sc-1nipn43-6 c10 css-view-1dbjc4n r-justifyContent-1777fci r-paddingVertical-1w50u8q S6"
          >
            <div
              className="c11 responsiveweb__Meta-sc-1nipn43-5 c11 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c12 responsiveweb__Separator-sc-1nipn43-7 c12 css-view-1dbjc4n"
            />
            <div
              className="c11 responsiveweb__Meta-sc-1nipn43-5 c11 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <div
                className="c13 responsiveweb__DatePublicationContainer-sc-1nipn43-0 c13 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S7"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c8 c14 c15"
        >
          <div
            className="IS7"
          />
          <div>
            <div
              className="c16"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c17 responsiveweb__BodyContainer-sc-1exejum-3 c17 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c19"
        >
          <h2
            className="c20"
          >
            Sponsored
          </h2>
          <div
            className="c21"
          />
          <div
            className="c21"
          />
        </div>
        <p
          className="c22"
        >
          Some content
        </p>
        <div
          className="c23 responsiveweb__PullQuoteContainer-sc-16nqyj8-10 c23 css-view-1dbjc4n"
        >
          <div
            className="c24 responsiveweb__PullQuoteResp-sc-16nqyj8-9 c24 css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
        >
          <figure
            className="IS13"
          >
            <div
              className="css-view-1dbjc4n IS12"
            >
              <div
                className="css-view-1dbjc4n IS11"
              >
                <div
                  className="IS10"
                >
                  <div
                    className="IS9"
                  >
                    <video
                      className="video-js IS8"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c25 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c25 css-view-1dbjc4n"
              >
                <div
                  className="css-view-1dbjc4n"
                >
                  <div
                    className="css-view-1dbjc4n r-paddingTop-m611by S9"
                  >
                    <div
                      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S8"
                    >
                      This is video caption
                    </div>
                  </div>
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="hidden c26"
        >
          <AdContainer />
        </div>
        <div>
          <div
            className="c27 responsiveweb__SecondaryImg-sc-16nqyj8-7 c27 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="c28 responsiveweb__InlineImg-sc-16nqyj8-8 c28 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the culture magazine 1`] = `
.c22 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c22:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c25 {
  padding-left: 10px;
}

.c18 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c27 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c28 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c24 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c23 {
  display: block;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c19.hidden {
  visibility: hidden;
}

.c20 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c21 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 250px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 10px 0;
  border-top: 1px solid rgb(219,219,219);
  border-bottom: 1px solid rgb(219,219,219);
}

.c26.hidden {
  min-height: auto;
  margin: 0;
  padding: 0;
  visibility: hidden;
}

.c9 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c9 + .c8 {
  margin-top: -1px !important;
}

.c9:last-child {
  margin-bottom: 30px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c8 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c17 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c16 {
  background-color: #FFFFFF;
  height: 60px;
}

.c16 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c16.tc-sticky {
  will-change: height,box-shadow;
}

.c16[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c16[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c15 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c15 + .c14 {
  margin-top: -1px !important;
}

.c15:last-child {
  margin-bottom: 30px;
}

.c15.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c13 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c5 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c11 {
  max-width: 100%;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  display: none;
}

.c7 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c22 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c27 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c28 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c28 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c23 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c21 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c21:first-of-type {
    margin-right: 1.5%;
  }

  .c21:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c26 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c26 {
    min-height: 250px;
  }
}

@media (min-width:768px) {
  .c9 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c9 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c9 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c12 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c6 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.S1 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S6 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S7 {
  line-height: 15px;
  margin-top: 5px;
}

.S8 {
  line-height: 17px;
}

.S9 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  font-family: Flama-Bold;
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  display: none;
}

.IS8 {
  height: 100%;
  width: 100%;
}

.IS9 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS12 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS13 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0 responsiveweb-sc-1exejum-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <div
            className="c3 responsiveweb__HeaderContainer-sc-1nipn43-2 c3 css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S5"
          >
            <div
              className="css-view-1dbjc4n r-marginBottom-15d164r S2"
            >
              <div
                className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S1"
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="c4 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1nipn43-3 c4 css-text-901oao r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S3"
            >
              Some Headline
            </h1>
            <div
              className="c5 responsiveweb__FlagsContainer-sc-1nipn43-1 c5 css-view-1dbjc4n"
            >
              <ArticleFlags />
            </div>
            <h2
              className="c6 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1nipn43-8 c6 css-text-901oao r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S4"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c7 IS6"
        />
        <div
          className="c8 c9"
        >
          <div
            className="c10 responsiveweb__MetaContainer-sc-1nipn43-6 c10 css-view-1dbjc4n r-justifyContent-1777fci r-paddingVertical-1w50u8q S6"
          >
            <div
              className="c11 responsiveweb__Meta-sc-1nipn43-5 c11 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c12 responsiveweb__Separator-sc-1nipn43-7 c12 css-view-1dbjc4n"
            />
            <div
              className="c11 responsiveweb__Meta-sc-1nipn43-5 c11 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <div
                className="c13 responsiveweb__DatePublicationContainer-sc-1nipn43-0 c13 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S7"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c8 c14 c15"
        >
          <div
            className="IS7"
          />
          <div>
            <div
              className="c16"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c17 responsiveweb__BodyContainer-sc-1exejum-3 c17 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c19"
        >
          <h2
            className="c20"
          >
            Sponsored
          </h2>
          <div
            className="c21"
          />
          <div
            className="c21"
          />
        </div>
        <p
          className="c22"
        >
          Some content
        </p>
        <div
          className="c23 responsiveweb__PullQuoteContainer-sc-16nqyj8-10 c23 css-view-1dbjc4n"
        >
          <div
            className="c24 responsiveweb__PullQuoteResp-sc-16nqyj8-9 c24 css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
        >
          <figure
            className="IS13"
          >
            <div
              className="css-view-1dbjc4n IS12"
            >
              <div
                className="css-view-1dbjc4n IS11"
              >
                <div
                  className="IS10"
                >
                  <div
                    className="IS9"
                  >
                    <video
                      className="video-js IS8"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c25 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c25 css-view-1dbjc4n"
              >
                <div
                  className="css-view-1dbjc4n"
                >
                  <div
                    className="css-view-1dbjc4n r-paddingTop-m611by S9"
                  >
                    <div
                      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S8"
                    >
                      This is video caption
                    </div>
                  </div>
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="hidden c26"
        >
          <AdContainer />
        </div>
        <div>
          <div
            className="c27 responsiveweb__SecondaryImg-sc-16nqyj8-7 c27 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="c28 responsiveweb__InlineImg-sc-16nqyj8-8 c28 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the style magazine 1`] = `
.c22 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c22:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c25 {
  padding-left: 10px;
}

.c18 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c27 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c28 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c24 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c23 {
  display: block;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c19.hidden {
  visibility: hidden;
}

.c20 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c21 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 250px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 10px 0;
  border-top: 1px solid rgb(219,219,219);
  border-bottom: 1px solid rgb(219,219,219);
}

.c26.hidden {
  min-height: auto;
  margin: 0;
  padding: 0;
  visibility: hidden;
}

.c9 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c9 + .c8 {
  margin-top: -1px !important;
}

.c9:last-child {
  margin-bottom: 30px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c8 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c17 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c16 {
  background-color: #FFFFFF;
  height: 60px;
}

.c16 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c16.tc-sticky {
  will-change: height,box-shadow;
}

.c16[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c16[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c15 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c15 + .c14 {
  margin-top: -1px !important;
}

.c15:last-child {
  margin-bottom: 30px;
}

.c15.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c13 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c5 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c11 {
  max-width: 100%;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  display: none;
}

.c7 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c22 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c27 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c28 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c28 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c23 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c21 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c21:first-of-type {
    margin-right: 1.5%;
  }

  .c21:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c26 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c26 {
    min-height: 250px;
  }
}

@media (min-width:768px) {
  .c9 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c9 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c9 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c12 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c6 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.S1 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S6 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S7 {
  line-height: 15px;
  margin-top: 5px;
}

.S8 {
  line-height: 17px;
}

.S9 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  font-family: CenturyGothic-Bold;
  text-transform: uppercase;
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  display: none;
}

.IS8 {
  height: 100%;
  width: 100%;
}

.IS9 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS12 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS13 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0 responsiveweb-sc-1exejum-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <div
            className="c3 responsiveweb__HeaderContainer-sc-1nipn43-2 c3 css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S5"
          >
            <div
              className="css-view-1dbjc4n r-marginBottom-15d164r S2"
            >
              <div
                className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S1"
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="c4 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1nipn43-3 c4 css-text-901oao r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S3"
            >
              Some Headline
            </h1>
            <div
              className="c5 responsiveweb__FlagsContainer-sc-1nipn43-1 c5 css-view-1dbjc4n"
            >
              <ArticleFlags />
            </div>
            <h2
              className="c6 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1nipn43-8 c6 css-text-901oao r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S4"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c7 IS6"
        />
        <div
          className="c8 c9"
        >
          <div
            className="c10 responsiveweb__MetaContainer-sc-1nipn43-6 c10 css-view-1dbjc4n r-justifyContent-1777fci r-paddingVertical-1w50u8q S6"
          >
            <div
              className="c11 responsiveweb__Meta-sc-1nipn43-5 c11 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c12 responsiveweb__Separator-sc-1nipn43-7 c12 css-view-1dbjc4n"
            />
            <div
              className="c11 responsiveweb__Meta-sc-1nipn43-5 c11 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <div
                className="c13 responsiveweb__DatePublicationContainer-sc-1nipn43-0 c13 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S7"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c8 c14 c15"
        >
          <div
            className="IS7"
          />
          <div>
            <div
              className="c16"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c17 responsiveweb__BodyContainer-sc-1exejum-3 c17 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c19"
        >
          <h2
            className="c20"
          >
            Sponsored
          </h2>
          <div
            className="c21"
          />
          <div
            className="c21"
          />
        </div>
        <p
          className="c22"
        >
          Some content
        </p>
        <div
          className="c23 responsiveweb__PullQuoteContainer-sc-16nqyj8-10 c23 css-view-1dbjc4n"
        >
          <div
            className="c24 responsiveweb__PullQuoteResp-sc-16nqyj8-9 c24 css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
        >
          <figure
            className="IS13"
          >
            <div
              className="css-view-1dbjc4n IS12"
            >
              <div
                className="css-view-1dbjc4n IS11"
              >
                <div
                  className="IS10"
                >
                  <div
                    className="IS9"
                  >
                    <video
                      className="video-js IS8"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c25 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c25 css-view-1dbjc4n"
              >
                <div
                  className="css-view-1dbjc4n"
                >
                  <div
                    className="css-view-1dbjc4n r-paddingTop-m611by S9"
                  >
                    <div
                      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S8"
                    >
                      This is video caption
                    </div>
                  </div>
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="hidden c26"
        >
          <AdContainer />
        </div>
        <div>
          <div
            className="c27 responsiveweb__SecondaryImg-sc-16nqyj8-7 c27 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="c28 responsiveweb__InlineImg-sc-16nqyj8-8 c28 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;

exports[`full article with style in the sunday times magazine 1`] = `
.c22 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c22:first-of-type:after {
  content: "";
  clear: both;
  display: table;
}

.c25 {
  padding-left: 10px;
}

.c18 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c27 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c28 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c24 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c23 {
  display: block;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 auto 30px;
  width: 80.8%;
  min-height: 210px;
}

.c19.hidden {
  visibility: hidden;
}

.c20 {
  border-bottom: 1px solid #dbdbdb;
  color: #333;
  -webkit-flex: 1 1 100%;
  -ms-flex: 1 1 100%;
  flex: 1 1 100%;
  font: normal 14px / 17px TimesDigitalW04-Regular;
  margin-bottom: 10px;
  padding: 5px 0;
  text-transform: uppercase;
}

.c21 {
  -webkit-flex: 1 1 50%;
  -ms-flex: 1 1 50%;
  flex: 1 1 50%;
}

.c26 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 250px;
  margin: 30px 0;
  box-sizing: content-box;
  padding: 10px 0;
  border-top: 1px solid rgb(219,219,219);
  border-bottom: 1px solid rgb(219,219,219);
}

.c26.hidden {
  min-height: auto;
  margin: 0;
  padding: 0;
  visibility: hidden;
}

.c9 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c9 + .c8 {
  margin-top: -1px !important;
}

.c9:last-child {
  margin-bottom: 30px;
}

.c2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 > .c8 {
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c17 {
  display: block;
  -webkit-order: 4;
  -ms-flex-order: 4;
  order: 4;
}

.c16 {
  background-color: #FFFFFF;
  height: 60px;
}

.c16 [data-tc-sticky-sizer] {
  border-bottom: 1px solid transparent;
  will-change: border-bottom-color;
}

.c16.tc-sticky {
  will-change: height,box-shadow;
}

.c16[MOCK-PROGRESS-SELECTOR] {
  height: 59.5px;
  box-shadow: 0 2px 5px 0 #c9c7c7ed;
}

.c16[MOCK-PROGRESS-SELECTOR].tc-sticky [data-tc-sticky-sizer] {
  border-bottom-color: #ffffffdb;
}

.c15 {
  border: solid #DBDBDB;
  border-width: 1px 0;
  margin-left: 10px;
  margin-right: 10px;
}

.c15 + .c14 {
  margin-top: -1px !important;
}

.c15:last-child {
  margin-bottom: 30px;
}

.c15.contains-tc-sticky {
  border-bottom-color: transparent;
}

.c13 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c5 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c3 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c11 {
  max-width: 100%;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  display: none;
}

.c7 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c0 {
  box-sizing: content-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 50px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1px;
  padding-top: 10px;
  padding-bottom: 10px;
}

@media (min-width:768px) {
  .c22 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c22 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c25 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c27 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c27 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c28 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c28 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c24 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c23 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c23 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    min-height: 120px;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (max-width:767px) {
  .c21 {
    -webkit-flex: 1 1 46%;
    -ms-flex: 1 1 46%;
    flex: 1 1 46%;
  }

  .c21:first-of-type {
    margin-right: 1.5%;
  }

  .c21:last-child {
    margin-left: 1.5%;
  }
}

@media (min-width:768px) {
  .c26 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c26 {
    min-height: 250px;
  }
}

@media (min-width:768px) {
  .c9 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c9 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c9 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c15 {
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c13 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c5 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c3 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c3 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c4 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c11 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c10 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c12 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c6 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c6 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c7 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

@media (min-width:768px) {
  .c0 {
    min-height: 90px;
  }
}

@media (min-width:970px) {
  .c0 {
    min-height: 250px;
  }
}

<style>
.S1 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-top: 1px;
}

.S2 {
  margin-bottom: 10px;
}

.S3 {
  line-height: 33px;
  margin-bottom: 10px;
}

.S4 {
  line-height: 26px;
  margin-bottom: 15px;
}

.S5 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S6 {
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.S7 {
  line-height: 15px;
  margin-top: 5px;
}

.S8 {
  line-height: 17px;
}

.S9 {
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  font-family: Tiempos-Headline-Bold;
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  display: none;
}

.IS8 {
  height: 100%;
  width: 100%;
}

.IS9 {
  height: 100%;
  width: 100%;
  position: relative;
}

.IS10 {
  height: 100%;
  width: 100%;
}

.IS11 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS12 {
  padding-bottom: 56.25%;
  position: relative;
}

.IS13 {
  margin: 0;
}
</style>

<div>
  <div />
  <article>
    <Helmet>
      <title>
        Some Headline
         | 
        
        The Times
      </title>
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <meta />
      <script>
        {"@context":"http://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Some byline"}}
      </script>
    </Helmet>
    <div
      className="c0 responsiveweb-sc-1exejum-0 c0 css-view-1dbjc4n"
    >
      <AdContainer
        className="IS1"
      />
    </div>
    <main
      className="c1 responsiveweb__MainContainer-sc-1exejum-1 c1 css-view-1dbjc4n"
    >
      <div
        className="c2 responsiveweb__HeaderContainer-sc-1exejum-2 c2 css-view-1dbjc4n"
      >
        <div
          className="css-view-1dbjc4n IS5"
        >
          <div
            className="c3 responsiveweb__HeaderContainer-sc-1nipn43-2 c3 css-view-1dbjc4n r-alignItems-1awozwy r-paddingBottom-2o15sn r-paddingHorizontal-d9fdf6 r-paddingTop-u04ygo S5"
          >
            <div
              className="css-view-1dbjc4n r-marginBottom-15d164r S2"
            >
              <div
                className="css-text-901oao r-fontFamily-j2s0nr r-fontSize-1enofrn r-fontWeight-16dba41 r-letterSpacing-ud0q2t r-lineHeight-56xrmm r-marginBottom-p1pxzi r-marginTop-19i43ro r-paddingTop-njp1lv IS2 S1"
              >
                SOME LABEL
              </div>
            </div>
            <h1
              className="c4 css-reset-4rbku5 responsiveweb__HeadlineContainer-sc-1nipn43-3 c4 css-text-901oao r-fontSize-1ra0lkn r-lineHeight-1j8sj39 r-marginBottom-15d164r r-textAlign-q4m81j IS3 S3"
            >
              Some Headline
            </h1>
            <div
              className="c5 responsiveweb__FlagsContainer-sc-1nipn43-1 c5 css-view-1dbjc4n"
            >
              <ArticleFlags />
            </div>
            <h2
              className="c6 css-reset-4rbku5 responsiveweb__StandfirstContainer-sc-1nipn43-8 c6 css-text-901oao r-fontFamily-4h8ur4 r-fontSize-adyw6z r-lineHeight-eaezby r-marginBottom-ku1wi2 r-paddingHorizontal-utggzx r-textAlign-q4m81j IS4 S4"
            >
              Some Standfirst
            </h2>
          </div>
        </div>
        <ArticleLeadAsset
          className="c7 IS6"
        />
        <div
          className="c8 c9"
        >
          <div
            className="c10 responsiveweb__MetaContainer-sc-1nipn43-6 c10 css-view-1dbjc4n r-justifyContent-1777fci r-paddingVertical-1w50u8q S6"
          >
            <div
              className="c11 responsiveweb__Meta-sc-1nipn43-5 c11 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <ArticleBylineWithLinks />
            </div>
            <div
              className="c12 responsiveweb__Separator-sc-1nipn43-7 c12 css-view-1dbjc4n"
            />
            <div
              className="c11 responsiveweb__Meta-sc-1nipn43-5 c11 css-view-1dbjc4n r-flexDirection-18u37iz r-flexWrap-1w6e6rj r-justifyContent-1777fci S6"
            >
              <div
                className="c13 responsiveweb__DatePublicationContainer-sc-1nipn43-0 c13 css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-fxxt2n r-marginTop-1g94qm0 S7"
              >
                <DatePublication />
              </div>
            </div>
          </div>
        </div>
        <div
          className="c8 c14 c15"
        >
          <div
            className="IS7"
          />
          <div>
            <div
              className="c16"
            >
              <div>
                <SaveAndShareBar />
              </div>
            </div>
          </div>
        </div>
      </div>
      <article
        className="c17 responsiveweb__BodyContainer-sc-1exejum-3 c17 css-view-1dbjc4n"
      >
        <div>
          <div
            className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <Link>
          Some Link
        </Link>
        <div
          className="group-3 hidden c19"
        >
          <h2
            className="c20"
          >
            Sponsored
          </h2>
          <div
            className="c21"
          />
          <div
            className="c21"
          />
        </div>
        <p
          className="c22"
        >
          Some content
        </p>
        <div
          className="c23 responsiveweb__PullQuoteContainer-sc-16nqyj8-10 c23 css-view-1dbjc4n"
        >
          <div
            className="c24 responsiveweb__PullQuoteResp-sc-16nqyj8-9 c24 css-view-1dbjc4n"
          >
            <PullQuote>
              The pull quote content
            </PullQuote>
          </div>
        </div>
        <div
          className="c18 responsiveweb__PrimaryImg-sc-16nqyj8-5 c18 css-view-1dbjc4n"
        >
          <figure
            className="IS13"
          >
            <div
              className="css-view-1dbjc4n IS12"
            >
              <div
                className="css-view-1dbjc4n IS11"
              >
                <div
                  className="IS10"
                >
                  <div
                    className="IS9"
                  >
                    <video
                      className="video-js IS8"
                    />
                  </div>
                </div>
              </div>
            </div>
            <figcaption>
              <div
                className="c25 inset-captionweb__InsetCaptionStyle-sc-8m7lci-0 c25 css-view-1dbjc4n"
              >
                <div
                  className="css-view-1dbjc4n"
                >
                  <div
                    className="css-view-1dbjc4n r-paddingTop-m611by S9"
                  >
                    <div
                      className="css-text-901oao r-color-1khp51w r-fontFamily-j2s0nr r-fontSize-n6v787 r-lineHeight-5fcqz0 S8"
                    >
                      This is video caption
                    </div>
                  </div>
                </div>
              </div>
            </figcaption>
          </figure>
        </div>
        <div
          className="hidden c26"
        >
          <AdContainer />
        </div>
        <div>
          <div
            className="c27 responsiveweb__SecondaryImg-sc-16nqyj8-7 c27 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div>
          <div
            className="c28 responsiveweb__InlineImg-sc-16nqyj8-8 c28 css-view-1dbjc4n"
          >
            <ArticleImage />
          </div>
        </div>
        <div />
        <ArticleExtras />
      </article>
    </main>
    <AdContainer />
    <AdContainer />
    <AdContainer />
  </article>
</div>
`;
